@@ -15,6 +15,10 @@
  */
 package org.opendatakit.tables.data;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
@@ -30,19 +34,85 @@ import android.util.Log;
  * A class for accessing and modifying a user table.
  * 
  * @author hkworden@gmail.com (Hilary Worden)
+ * @author sudar.sam@gmail.com
  */
 public class DbTable {
+  
+  private final static String TAG = "DbTable";
     
     public static final String DB_ROW_ID = "id";
-    public static final String DB_SRC_PHONE_NUMBER = "srcPhoneNum";
-    public static final String DB_LAST_MODIFIED_TIME = "lastModTime";
-    public static final String DB_SYNC_TAG = "syncTag";
-    public static final String DB_SYNC_STATE = "syncState";
+    public static final String DB_URI_USER = "uri_user";
+    public static final String DB_LAST_MODIFIED_TIME = "last_mod_time";
+    public static final String DB_SYNC_TAG = "sync_tag";
+    public static final String DB_SYNC_STATE = "sync_state";
     public static final String DB_TRANSACTIONING = "transactioning";
+    public static final String DB_TIMESTAMP = "timestamp";
+    public static final String DB_SAVED = "saved";
+    public static final String DB_INSTANCE_NAME = "instance_name";
+        /*
+         * For ODKTables generated rows (as opposed to ODK Collect), the 
+         * thought is that this instance name would just be the iso86 pretty
+         * print date of creation.
+         */
+    public static final String DB_LOCALE = "locale";
+    
+    /********************************************************
+     * Default values for those columns which require them.
+     ********************************************************/
+    // some of these are unfortunately littered in various places throughout
+    // the code. I don't have time to track them down at the moment, but they
+    // default values should probably be centralized here.
+    // TODO: see above
+    
+    
+    
+    
+    /*
+     * These are the columns that are present in any row in the database.
+     * Each row should have these in addition to the user-defined columns.
+     * If you add a column here you have to be sure to also add it in the 
+     * create table statement, which can't be programmatically created easily.
+     */
+    private static final List<String> ADMIN_COLUMNS;
+    
+    /*
+     * These are the columns that we want to include in sync rows to sync up
+     * to the server. This is a work in progress that is being added later, so
+     * I can't promise that there isn't some magic happening elsewhere that I
+     * am missing. Hopefully this will be exhaustive, however. It is a map of
+     * column name to column type that we will be putting into a row for
+     * SyncProcessor. (At least that is the obvious place I'm making this for).
+     */
+    private static final Map<String, ColumnType> COLUMNS_TO_SYNC;
+    
+    static {
+      ADMIN_COLUMNS = new ArrayList<String>();
+      ADMIN_COLUMNS.add(DB_ROW_ID);
+      ADMIN_COLUMNS.add(DB_URI_USER);
+      ADMIN_COLUMNS.add(DB_LAST_MODIFIED_TIME);
+      ADMIN_COLUMNS.add(DB_SYNC_TAG);
+      ADMIN_COLUMNS.add(DB_SYNC_STATE);
+      ADMIN_COLUMNS.add(DB_TRANSACTIONING);
+      ADMIN_COLUMNS.add(DB_TIMESTAMP);
+      ADMIN_COLUMNS.add(DB_SAVED);
+      ADMIN_COLUMNS.add(DB_INSTANCE_NAME);
+      // put the columns in to the to-sync map.
+      COLUMNS_TO_SYNC = new HashMap<String, ColumnType>();
+      COLUMNS_TO_SYNC.put(DB_URI_USER, ColumnType.PHONE_NUMBER);
+      COLUMNS_TO_SYNC.put(DB_LAST_MODIFIED_TIME, ColumnType.DATETIME);
+      COLUMNS_TO_SYNC.put(DB_INSTANCE_NAME, ColumnType.TEXT);
+    }
+    
+    public enum SavedStatus {
+    	COMPLETE,
+    	INCOMPLETE
+    };
     
     public static final String DB_CSV_COLUMN_LIST =
-        DB_ROW_ID + ", " + DB_SRC_PHONE_NUMBER + ", " + DB_LAST_MODIFIED_TIME +
-        ", " + DB_SYNC_TAG + ", " + DB_SYNC_STATE + ", " + DB_TRANSACTIONING;
+        DB_ROW_ID + ", " + DB_URI_USER + ", " + DB_LAST_MODIFIED_TIME +
+        ", " + DB_SYNC_TAG + ", " + DB_SYNC_STATE + ", " + DB_TRANSACTIONING +
+        ", " + DB_TIMESTAMP + ", " + DB_SAVED + ", " + DB_INSTANCE_NAME +
+        ", " + DB_LOCALE;
     
     private final DataUtil du;
     private final DbHelper dbh;
@@ -52,31 +122,48 @@ public class DbTable {
         return new DbTable(dbh, tableId);
     }
     
+    public static Map<String, ColumnType> getColumnsToSync() {
+      return Collections.unmodifiableMap(COLUMNS_TO_SYNC);
+    }
+    
     private DbTable(DbHelper dbh, String tableId) {
         this.du = DataUtil.getDefaultDataUtil();
         this.dbh = dbh;
-        this.tp = TableProperties.getTablePropertiesForTable(dbh, tableId);
+        this.tp = TableProperties.getTablePropertiesForTable(dbh, tableId,
+            KeyValueStore.Type.ACTIVE);
+        // so this looks like the problem, needs to somehow know if it should
+        // be drawing the props from the server table (if you'd dl'ing a table)
+        // or if you're creating a table and therefore want the active.
     }
     
     static void createDbTable(SQLiteDatabase db, TableProperties tp) {
+      boolean testOpen = db.isOpen();
         StringBuilder colListBuilder = new StringBuilder();
         for (ColumnProperties cp : tp.getColumns()) {
             colListBuilder.append(", " + cp.getColumnDbName());
-            if (cp.getColumnType() == ColumnProperties.ColumnType.NUMBER) {
+            if (cp.getColumnType() == ColumnType.NUMBER) {
                 colListBuilder.append(" REAL");
+            } else if (cp.getColumnType() == ColumnType.INTEGER) {
+                colListBuilder.append(" INTEGER");
             } else {
                 colListBuilder.append(" TEXT");
             }
         }
-        db.execSQL("CREATE TABLE " + tp.getDbTableName() + "(" +
-                       DB_ROW_ID + " TEXT NOT NULL" +
-                ", " + DB_SRC_PHONE_NUMBER + " TEXT" +
-                ", " + DB_LAST_MODIFIED_TIME + " TEXT NOT NULL" +
-                ", " + DB_SYNC_TAG + " TEXT" +
-                ", " + DB_SYNC_STATE + " INTEGER NOT NULL" +
-                ", " + DB_TRANSACTIONING + " INTEGER NOT NULL" +
-                colListBuilder.toString() +
-                ")");
+        testOpen = db.isOpen();
+        String toExecute = "CREATE TABLE " + tp.getDbTableName() + "(" +
+            DB_ROW_ID + " TEXT NOT NULL" +
+     ", " + DB_URI_USER + " TEXT NULL" +
+     ", " + DB_LAST_MODIFIED_TIME + " TEXT NOT NULL" +
+     ", " + DB_SYNC_TAG + " TEXT NULL" +
+     ", " + DB_SYNC_STATE + " INTEGER NOT NULL" +
+     ", " + DB_TRANSACTIONING + " INTEGER NOT NULL" +
+     ", " + DB_TIMESTAMP + " INTEGER NOT NULL" +
+     ", " + DB_SAVED + " TEXT NULL" +
+     ", " + DB_INSTANCE_NAME + " TEXT NOT NULL" +
+     ", " + DB_LOCALE + " TEXT NULL" +
+     colListBuilder.toString() +
+     ")";
+        db.execSQL(toExecute);
     }
     
     /**
@@ -95,33 +182,50 @@ public class DbTable {
      * @param orderBy the column to order by (can be null)
      * @return a Table of the requested data
      */
-    public Table getRaw(String[] columns, String[] selectionKeys,
+    public Table getRaw(ArrayList<String> columns, String[] selectionKeys,
             String[] selectionArgs, String orderBy) {
         if (columns == null) {
             ColumnProperties[] cps = tp.getColumns();
-            columns = new String[cps.length + 5];
-            columns[0] = DB_SRC_PHONE_NUMBER;
-            columns[1] = DB_LAST_MODIFIED_TIME;
-            columns[2] = DB_SYNC_TAG;
-            columns[3] = DB_SYNC_STATE;
-            columns[4] = DB_TRANSACTIONING;
+             columns = new ArrayList<String>();
+             columns.addAll(ADMIN_COLUMNS);
+//            columns = new ArrayList<String>();
+//            columns.add(DB_URI_USER);
+//            columns.add(DB_LAST_MODIFIED_TIME);
+//            columns.add(DB_SYNC_TAG);
+//            columns.add(DB_SYNC_STATE);
+//            columns.add(DB_TRANSACTIONING);
+//            need to add this stuff now;
             for (int i = 0; i < cps.length; i++) {
-                columns[i + 5] = cps[i].getColumnDbName();
+            	columns.add(cps[i].getColumnDbName());
             }
         }
-        String[] colArr = new String[columns.length + 1];
+        String[] colArr = new String[columns.size() + 1];
         colArr[0] = DB_ROW_ID;
-        for (int i = 0; i < columns.length; i++) {
-            colArr[i + 1] = columns[i];
+        for (int i = 0; i < columns.size(); i++) {
+            colArr[i + 1] = columns.get(i);
         }
-        SQLiteDatabase db = dbh.getReadableDatabase();
-        Cursor c = db.query(tp.getDbTableName(), colArr,
-                buildSelectionSql(selectionKeys),
-                selectionArgs, null, null, orderBy);
-        Table table = buildTable(c, columns);
-        c.close();
-        db.close();
-        return table;
+        SQLiteDatabase db = null;
+        Cursor c = null;
+        try {
+	        db = dbh.getReadableDatabase();
+	        c = db.query(tp.getDbTableName(), colArr,
+	                buildSelectionSql(selectionKeys),
+	                selectionArgs, null, null, orderBy);
+	        Table table = buildTable(c, columns);
+	        return table;
+	    } finally {
+	    	try {
+	    		if ( c != null && !c.isClosed() ) {
+	    			c.close();
+	    		}
+	    	} finally {
+	        // TODO: fix the when to close problem
+
+//	    		if ( db != null ) {
+//	    			db.close();
+//	    		}
+	    	}
+	    }
     }
     
     public Table getRaw(Query query, String[] columns) {
@@ -142,95 +246,136 @@ public class DbTable {
     
     public GroupTable getGroupTable(Query query, ColumnProperties groupColumn,
             Query.GroupQueryType type) {
-        SqlData sd = query.toGroupSql(groupColumn.getColumnDbName(), type);
-        SQLiteDatabase db = dbh.getReadableDatabase();
-        Cursor c = db.rawQuery(sd.getSql(), sd.getArgs());
-        int gcColIndex = c.getColumnIndexOrThrow(
-                groupColumn.getColumnDbName());
-        int countColIndex = c.getColumnIndexOrThrow("g");
-        int rowCount = c.getCount();
-        String[] keys = new String[rowCount];
-        double[] values = new double[rowCount];
-        c.moveToFirst();
-        for (int i = 0; i < rowCount; i++) {
-            keys[i] = c.getString(gcColIndex);
-            values[i] = c.getDouble(countColIndex);
-            c.moveToNext();
-        }
-        c.close();
-        db.close();
-        return new GroupTable(keys, values);
+    	SQLiteDatabase db = null;
+    	Cursor c = null;
+    	try {
+	        SqlData sd = query.toGroupSql(groupColumn.getColumnDbName(), type);
+	        db = dbh.getReadableDatabase();
+	        c = db.rawQuery(sd.getSql(), sd.getArgs());
+	        int gcColIndex = c.getColumnIndexOrThrow(
+	                groupColumn.getColumnDbName());
+	        int countColIndex = c.getColumnIndexOrThrow("g");
+	        int rowCount = c.getCount();
+	        String[] keys = new String[rowCount];
+	        double[] values = new double[rowCount];
+	        c.moveToFirst();
+	        for (int i = 0; i < rowCount; i++) {
+	            keys[i] = c.getString(gcColIndex);
+	            values[i] = c.getDouble(countColIndex);
+	            c.moveToNext();
+	        }
+	        return new GroupTable(keys, values);
+	    } finally {
+	    	try {
+	    		if ( c != null && !c.isClosed() ) {
+	    			c.close();
+	    		}
+	    	} finally {
+	        // TODO: fix the when to close problem
+
+//	    		if ( db != null ) {
+//	    			db.close();
+//	    		}
+	    	}
+	    }
     }
     
     public ConflictTable getConflictTable(Query query) {
-        SqlData sd = query.toConflictSql();
-        SQLiteDatabase db = dbh.getReadableDatabase();
-        Cursor c = db.rawQuery(sd.getSql(), sd.getArgs());
-        Log.d("DBT", sd.getSql());
-        int count = c.getCount() / 2;
-        Log.d("DBT", "cursor count: " + c.getCount());
-        String[] header = new String[tp.getColumns().length];
-        String[] rowIds = new String[count];
-        String[][] syncTags = new String[count][2];
-        String[][][] values = new String[count][2][tp.getColumns().length];
-        if (count == 0) {
-            c.close();
-            db.close();
-            return new ConflictTable(header, rowIds, syncTags, values);
-        }
-        int idColIndex = c.getColumnIndexOrThrow(DB_ROW_ID);
-        int stColIndex = c.getColumnIndexOrThrow(DB_SYNC_TAG);
-        int[] colIndices = new int[tp.getColumns().length];
-        for (int i = 0; i < tp.getColumns().length; i++) {
-            colIndices[i] = c.getColumnIndexOrThrow(
-                    tp.getColumns()[i].getColumnDbName());
-            header[i] = tp.getColumns()[i].getDisplayName();
-        }
-        c.moveToFirst();
-        for (int i = 0; i < count; i++) {
-            rowIds[i] = c.getString(idColIndex);
-            syncTags[i][0] = c.getString(stColIndex);
-            for (int j = 0; j < tp.getColumns().length; j++) {
-                values[i][0][j] = c.getString(colIndices[j]);
-            }
-            c.moveToNext();
-            syncTags[i][1] = c.getString(stColIndex);
-            for (int j = 0; j < tp.getColumns().length; j++) {
-                values[i][1][j] = c.getString(colIndices[j]);
-            }
-            c.moveToNext();
-        }
-        c.close();
-        db.close();
-        return new ConflictTable(header, rowIds, syncTags, values);
+    	SQLiteDatabase db = null;
+    	Cursor c = null;
+    	try {
+	        db = dbh.getReadableDatabase();
+	        SqlData sd = query.toConflictSql();
+	        c = db.rawQuery(sd.getSql(), sd.getArgs());
+	        Log.d("DBT", sd.getSql());
+	        int count = c.getCount() / 2;
+	        Log.d("DBT", "cursor count: " + c.getCount());
+	        String[] header = new String[tp.getColumns().length];
+	        String[] rowIds = new String[count];
+	        String[][] syncTags = new String[count][2];
+	        String[][][] values = new String[count][2][tp.getColumns().length];
+	        if (count == 0) {
+	            return new ConflictTable(header, rowIds, syncTags, values);
+	        }
+	        int idColIndex = c.getColumnIndexOrThrow(DB_ROW_ID);
+	        int stColIndex = c.getColumnIndexOrThrow(DB_SYNC_TAG);
+	        int[] colIndices = new int[tp.getColumns().length];
+	        for (int i = 0; i < tp.getColumns().length; i++) {
+	            colIndices[i] = c.getColumnIndexOrThrow(
+	                    tp.getColumns()[i].getColumnDbName());
+	            header[i] = tp.getColumns()[i].getDisplayName();
+	        }
+	        c.moveToFirst();
+	        for (int i = 0; i < count; i++) {
+	            rowIds[i] = c.getString(idColIndex);
+	            syncTags[i][0] = c.getString(stColIndex);
+	            for (int j = 0; j < tp.getColumns().length; j++) {
+	                values[i][0][j] = c.getString(colIndices[j]);
+	            }
+	            c.moveToNext();
+	            syncTags[i][1] = c.getString(stColIndex);
+	            for (int j = 0; j < tp.getColumns().length; j++) {
+	                values[i][1][j] = c.getString(colIndices[j]);
+	            }
+	            c.moveToNext();
+	        }
+	        return new ConflictTable(header, rowIds, syncTags, values);
+	    } finally {
+	    	try {
+	    		if ( c != null && !c.isClosed() ) {
+	    			c.close();
+	    		}
+	    	} finally {
+	        // TODO: fix the when to close problem
+//	    		if ( db != null ) {
+//	    			db.close();
+//	    		}
+	    	}
+	    }
     }
     
     private Table dataQuery(SqlData sd) {
-        SQLiteDatabase db = dbh.getReadableDatabase();
-        Cursor c = db.rawQuery(sd.getSql(), sd.getArgs());
-        Table table = buildTable(c, tp.getColumnOrder());
-        c.close();
-        db.close();
-        return table;
+        SQLiteDatabase db = null;
+        Cursor c = null;
+        try {
+        	db = dbh.getReadableDatabase();
+        	c = db.rawQuery(sd.getSql(), sd.getArgs());
+        	Table table = buildTable(c, tp.getColumnOrder());
+            return table;
+        } finally {
+        	try {
+        		if ( c != null && !c.isClosed() ) {
+        			c.close();
+        		}
+        	} finally {
+           // TODO: fix the when to close problem
+//        		if ( db != null ) {
+//        			db.close();
+//        		}
+        	}
+        }
     }
     
     /**
      * Builds a Table with the data from the given cursor.
      * The cursor, but not the columns array, must include the row ID column.
      */
-    private Table buildTable(Cursor c, String[] columns) {
-        int[] colIndices = new int[columns.length];
+    private Table buildTable(Cursor c, ArrayList<String> arrayList) {
+      Log.i(TAG, "entered dbTable buildTable");
+        int[] colIndices = new int[arrayList.size()];
         int rowCount = c.getCount();
         String[] rowIds = new String[rowCount];
-        String[][] data = new String[rowCount][columns.length];
+        String[][] data = new String[rowCount][arrayList.size()];
         int rowIdIndex = c.getColumnIndexOrThrow(DB_ROW_ID);
-        for (int i = 0; i < columns.length; i++) {
-            colIndices[i] = c.getColumnIndexOrThrow(columns[i]);
+        for (int i = 0; i < arrayList.size(); i++) {
+            colIndices[i] = c.getColumnIndexOrThrow(arrayList.get(i));
         }
         c.moveToFirst();
         for (int i = 0; i < rowCount; i++) {
+//          Log.i(TAG, "i (row): " + i);
             rowIds[i] = c.getString(rowIdIndex);
-            for (int j = 0; j < columns.length; j++) {
+            for (int j = 0; j < arrayList.size(); j++) {
+//              Log.i(TAG, " j (column): " + j);
               String value;
               try {
                 value = c.getString(colIndices[j]);
@@ -245,7 +390,8 @@ public class DbTable {
             }
             c.moveToNext();
         }
-        return new Table(rowIds, columns, data);
+        Log.i(TAG, "leaving Table buildTable");
+        return new Table(rowIds, arrayList, data);
     }
     
     private String[] getUserHeader() {
@@ -262,26 +408,32 @@ public class DbTable {
         String[] footer = new String[cps.length];
         for (int i = 0; i < cps.length; i++) {
             switch (cps[i].getFooterMode()) {
-            case ColumnProperties.FooterMode.COUNT:
+            case count:
                 footer[i] = getFooterItem(query, cps[i],
                         Query.GroupQueryType.COUNT);
                 break;
-            case ColumnProperties.FooterMode.MAXIMUM:
+            case maximum:
                 footer[i] = getFooterItem(query, cps[i],
                         Query.GroupQueryType.MAXIMUM);
                 break;
-            case ColumnProperties.FooterMode.MINIMUM:
+            case minimum:
                 footer[i] = getFooterItem(query, cps[i],
                         Query.GroupQueryType.MINIMUM);
                 break;
-            case ColumnProperties.FooterMode.SUM:
+            case sum:
                 footer[i] = getFooterItem(query, cps[i],
                         Query.GroupQueryType.SUM);
                 break;
-            case ColumnProperties.FooterMode.MEAN:
+            case mean:
                 footer[i] = getFooterItem(query, cps[i],
                         Query.GroupQueryType.AVERAGE);
                 break;
+            case none:
+                // we'll just do nothing?
+              break;
+            default:
+              Log.e(TAG, "unrecognized footer mode: " + 
+                  cps[i].getFooterMode().name());
             }
         }
         return footer;
@@ -289,15 +441,32 @@ public class DbTable {
     
     private String getFooterItem(Query query, ColumnProperties cp,
             Query.GroupQueryType type) {
-        SqlData sd = query.toGroupSql(cp.getColumnDbName(), type);
-        SQLiteDatabase db = dbh.getReadableDatabase();
-        Cursor c = db.rawQuery(sd.getSql(), sd.getArgs());
-        int gColIndex = c.getColumnIndexOrThrow("g");
-        c.moveToFirst();
-        String value = c.getString(gColIndex);
-        c.close();
-        db.close();
-        return value;
+    	SQLiteDatabase db = null;
+    	Cursor c = null;
+    	try {
+    		db = dbh.getReadableDatabase();
+	        SqlData sd = query.toFooterSql(cp.getColumnDbName(), type);
+	        c = db.rawQuery(sd.getSql(), sd.getArgs());
+	        if ( c.getCount() == 1 ) {
+		        int gColIndex = c.getColumnIndexOrThrow("g");
+		        c.moveToFirst();
+		        String value = c.getString(gColIndex);
+		        return value;
+	        } else {
+	        	return ""; // TODO: should this return null ???
+	        }
+    	} finally {
+			try {
+	    		if ( c != null && !c.isClosed() ) {
+    				c.close();
+	    		}
+			} finally {
+		      // TODO: fix the when to close problem
+//				if ( db != null ) {
+//					db.close();
+//				}
+			}
+    	}
     }
     
     /**
@@ -312,6 +481,9 @@ public class DbTable {
     /**
      * Adds a row to the table with an inserting synchronization state and the
      * transactioning status set to false.
+     * <p>
+     * I don't think this is called when downloading table data from the 
+     * server. I think it is only called when creating on the phone...
      */
     public void addRow(Map<String, String> values, String lastModTime,
             String srcPhone) {
@@ -323,15 +495,22 @@ public class DbTable {
         for (String column : values.keySet()) {
             cv.put(column, values.get(column));
         }
+        // The admin columns get added here and also in actualAddRow
         cv.put(DB_LAST_MODIFIED_TIME, lastModTime);
-        cv.put(DB_SRC_PHONE_NUMBER, srcPhone);
+        cv.put(DB_URI_USER, srcPhone);
         cv.put(DB_SYNC_STATE, SyncUtil.State.INSERTING);
         cv.put(DB_TRANSACTIONING, SyncUtil.boolToInt(false));
+        cv.put(DB_INSTANCE_NAME, 
+            Long.toString(System.currentTimeMillis()));
+        cv.put(DB_LOCALE, (String) null);
         actualAddRow(cv);
     }
     
     /**
      * Actually adds a row.
+     * <p>
+     * I think this gets called when you download a table from the server,
+     * whereas I don't think that addRow() does.
      * @param values the values to put in the row
      */
     public void actualAddRow(ContentValues values) {
@@ -340,9 +519,15 @@ public class DbTable {
           values.put(DB_ROW_ID, id);
         }
         SQLiteDatabase db = dbh.getWritableDatabase();
-        long result = db.insert(tp.getDbTableName(), null, values);
-        db.close();
-        Log.d("DBT", "insert, id=" + result);
+        try {
+	        values.put(DB_TIMESTAMP, System.currentTimeMillis());
+	        values.put(DB_SAVED, SavedStatus.COMPLETE.name());
+	        long result = db.insertOrThrow(tp.getDbTableName(), null, values);
+	        Log.d("DBT", "insert, id=" + result);
+        } finally {
+          // TODO: fix the when to close problem
+//        	db.close();
+        }
     }
     
     /**
@@ -364,7 +549,22 @@ public class DbTable {
     public void updateRow(String rowId, Map<String, String> values,
             String srcPhone, String lastModTime) {
         ContentValues cv = new ContentValues();
-        if (tp.isSynchronized() && getSyncState(rowId) == SyncUtil.State.REST)
+        // TODO is this a race condition of sorts? isSynchronized(), which 
+        // formerly returned isSynched, may kind of be doing double duty,
+        // saving if it the table is selected TO sync with the server, and also
+        // whether the information is up  to date? If so, and you are somehow
+        // able to uncheck the box before the server starts syncing, this could
+        // cause a problem. This should probably be resolved.
+        // UPDATE: I have used the KeyValueStoreSync to return the same value
+        // as hilary was originally using. However, this might have to be 
+        // updated.
+        KeyValueStoreManager kvsm = KeyValueStoreManager.getKVSManager(dbh);
+        KeyValueStoreSync syncKVSM = 
+            kvsm.getSyncStoreForTable(tp.getTableId());
+        boolean isSetToSync = syncKVSM.isSetToSync();
+        // hilary's original
+        //if (tp.isSynchronized() && getSyncState(rowId) == SyncUtil.State.REST)
+        if (isSetToSync && getSyncState(rowId) == SyncUtil.State.REST)
           cv.put(DB_SYNC_STATE, SyncUtil.State.UPDATING);
         for (String column : values.keySet()) {
             cv.put(column, values.get(column));
@@ -385,14 +585,20 @@ public class DbTable {
     private void actualUpdateRow(ContentValues values, String where,
             String[] whereArgs) {
         SQLiteDatabase db = dbh.getWritableDatabase();
-        db.update(tp.getDbTableName(), values, where, whereArgs);
-        db.close();
+        try {
+	        values.put(DbTable.DB_TIMESTAMP, System.currentTimeMillis());
+	        values.put(DbTable.DB_SAVED, DbTable.SavedStatus.COMPLETE.name());
+	        db.update(tp.getDbTableName(), values, where, whereArgs);
+        } finally {
+          // TODO: fix the when to close problem
+//        	db.close();
+        }
     }
     
     public void resolveConflict(String rowId, String syncTag,
             Map<String, String> values) {
         String[] deleteWhereArgs = { rowId,
-                new Integer(SyncUtil.State.DELETING).toString() };
+                Integer.valueOf(SyncUtil.State.DELETING).toString() };
         String deleteSql = DB_ROW_ID + " = ? AND " + DB_SYNC_STATE + " = ?";
         ContentValues updateValues = new ContentValues();
         updateValues.put(DB_SYNC_STATE, SyncUtil.State.UPDATING);
@@ -403,10 +609,16 @@ public class DbTable {
         String[] updateWhereArgs = { rowId };
         String updateWhereSql = DB_ROW_ID + " = ?";
         SQLiteDatabase db = dbh.getWritableDatabase();
-        db.delete(tp.getDbTableName(), deleteSql, deleteWhereArgs);
-        db.update(tp.getDbTableName(), updateValues, updateWhereSql,
-                updateWhereArgs);
-        db.close();
+        try {
+	        db.delete(tp.getDbTableName(), deleteSql, deleteWhereArgs);
+	        updateValues.put(DbTable.DB_TIMESTAMP, System.currentTimeMillis());
+	        updateValues.put(DbTable.DB_SAVED, DbTable.SavedStatus.COMPLETE.name());
+	        db.update(tp.getDbTableName(), updateValues, updateWhereSql,
+	                updateWhereArgs);
+        } finally {
+          // TODO: fix the when to close problem
+//        	db.close();
+        }
     }
     
     /**
@@ -414,7 +626,13 @@ public class DbTable {
      * deleted. Otherwise, actually deletes the row.
      */
     public void markDeleted(String rowId) {
-      if (!tp.isSynchronized()) {
+      KeyValueStoreManager kvsm = KeyValueStoreManager.getKVSManager(dbh);
+      KeyValueStoreSync syncKVSM = 
+          kvsm.getSyncStoreForTable(tp.getTableId());
+      boolean isSetToSync = syncKVSM.isSetToSync();
+      // hilary's original
+      //if (!tp.isSynchronized()) {
+      if (!isSetToSync) {
         deleteRowActual(rowId);
       } else {
         int syncState = getSyncState(rowId);
@@ -425,8 +643,14 @@ public class DbTable {
           ContentValues values = new ContentValues();
           values.put(DB_SYNC_STATE, SyncUtil.State.DELETING);
           SQLiteDatabase db = dbh.getWritableDatabase();
-          db.update(tp.getDbTableName(), values, DB_ROW_ID + " = ?", whereArgs);
-          db.close();
+          try {
+	          values.put(DbTable.DB_TIMESTAMP, System.currentTimeMillis());
+	          values.put(DbTable.DB_SAVED, DbTable.SavedStatus.COMPLETE.name());
+	          db.update(tp.getDbTableName(), values, DB_ROW_ID + " = ?", whereArgs);
+          } finally {
+            // TODO: fix the when to close problem
+//        	  db.close();
+          }
         }
       }
     }
@@ -443,8 +667,12 @@ public class DbTable {
     
     public void deleteRowActual(String whereClause, String[] whereArgs) {
         SQLiteDatabase db = dbh.getWritableDatabase();
-        db.delete(tp.getDbTableName(), whereClause, whereArgs);
-        db.close();
+        try {
+        	db.delete(tp.getDbTableName(), whereClause, whereArgs);
+        } finally {
+          // TODO: fix the when to close problem
+//        	db.close();
+        }
     }
     
     /**
@@ -453,17 +681,30 @@ public class DbTable {
      *         the row does not exist.
      */
     private int getSyncState(String rowId) {
-      SQLiteDatabase db = dbh.getReadableDatabase();
-      Cursor c = db.query(tp.getDbTableName(), new String[] { DB_SYNC_STATE }, DB_ROW_ID + " = ?",
-          new String[] { rowId }, null, null, null);
-      int syncState = -1;
-      if (c.moveToFirst()) {
-        int syncStateIndex = c.getColumnIndex(DB_SYNC_STATE);
-        syncState = c.getInt(syncStateIndex);
-      }
-      c.close();
-      db.close();
-      return syncState;
+		SQLiteDatabase db = null;
+		Cursor c = null;
+		try {
+	      db = dbh.getReadableDatabase();
+	      c = db.query(tp.getDbTableName(), new String[] { DB_SYNC_STATE }, DB_ROW_ID + " = ?",
+	          new String[] { rowId }, null, null, null);
+	      int syncState = -1;
+	      if (c.moveToFirst()) {
+	        int syncStateIndex = c.getColumnIndex(DB_SYNC_STATE);
+	        syncState = c.getInt(syncStateIndex);
+	      }
+	      return syncState;
+	    } finally {
+	    	try {
+	    		if ( c != null && !c.isClosed() ) {
+	    			c.close();
+	    		}
+	    	} finally {
+	    		if ( db != null ) {
+	    	      // TODO: fix the when to close problem
+//	    			db.close();
+	    		}
+	    	}
+	    }
     }
      
     /**
